--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dashboard-av-moreno</title>
+    <title>Dashboard Construcción Av. del Moreno</title>
   </head>
   <body>
+    <!-- 1. El Contenedor Vacío: -->
+    <!-- Aquí es donde React "pintará" todo tu Dashboard automáticamente. -->
     <div id="root"></div>
+    
+    <!-- 2. El Cerebro: -->
+    <!-- Este script llama al código de React que escribimos en src/main.tsx -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
